--- a/views/habits/new.ejs
+++ b/views/habits/new.ejs
@@ -6,27 +6,28 @@
                 <fieldset>
                     <legend>Add a New Item</legend>
                     <label>
-                        NAME: <input type="text" name="name" placeholder="Enter here">
+                        ITEM NAME: <input type="text" name="name" placeholder="Enter here" />
                     </label>
                     <label>
-                        TYPE: <input type="type" name="type" placeholder="Start a new habit, or correct a bad habit">
+                        TYPE: <input type="type" name="type" placeholder="Start a new habit, or correct a bad habit" />
                     </label>
                     <label>
-                        START DATE: <input type="date" name="startDate">
+                        START DATE: <input type="date" name="startDate" />
                     </label>
                     <label>
-                        TARGET DATE: <input type="date" name="targetDate">
+                        TARGET DATE: <input type="date" name="targetDate" />
                     </label>
                     <label>
-                        COMPLETE?: <input type="checkbox", name="complete">
+                        COMPLETE? <input type="checkbox", name="complete"/>
                     </label>
                     <label>
-                        NOTES: <input type="text" name="notes" placeholder="Enter notes here">
+                        NOTES: <input type="text" name="notes" placeholder="Enter notes here"/>
                     </label>
                     <label>
-                        USERNAME: <input type="text" name="username">
+                        USERNAME: <input type="text" name="username" />
                     </label>
                 </fieldset>
+                <input type="submit" value="Add" />
             </form>
         </div>
     </body>
