--- a/views/habits/index.ejs
+++ b/views/habits/index.ejs
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
+    <%- include("../partials/head.ejs") %> 
+
     <body>
+        <%- include("../partials/header.ejs") %> 
         <main>
             <div>
             <a href="/habits/new"><button>Add New Habit</button></a>
