--- a/views/habits/show.ejs
+++ b/views/habits/show.ejs
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
-    <body>
+    <%- include("../partials/head.ejs") %> 
+
+<body>
+    <%- include("../partials/header.ejs") %> 
         <main>
             <div>
                 <article>
