--- a/views/habits/new.ejs
+++ b/views/habits/new.ejs
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
+    <%- include("../partials/head.ejs") %> 
+
     <body>
+        <%- include("../partials/header.ejs") %> 
         <div>
             <form action="/habits" method="POST">
                 <fieldset>
