--- a/views/habits/pomodoro.ejs
+++ b/views/habits/pomodoro.ejs
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+    <%- include("../partials/head.ejs") %> 
+
     <body>
+        <%- include("../partials/header.ejs") %> 
         <main>
             <h1>Pomodoro Timer</h1>
             <div class="timer">
