--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -4,6 +4,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Habits</title>
     <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
-    <script scr="'/static/app.js" defer></script>
-    <link rel="stylesheet" href="styles.css">
+    <script scr="/static/app.js" defer></script>
+    <link rel="stylesheet" href="/static/styles.css">
 </head>
