--- a/views/habits/new.ejs
+++ b/views/habits/new.ejs
@@ -4,11 +4,11 @@
 
     <body>
         <%- include("../partials/header.ejs") %> 
-        <div>
+        <div class="new-div">
             <form action="/habits" method="POST">
-                <fieldset>
-                    <legend>Add a New Item</legend>
-                    <label>
+                <fieldset class="fieldset">
+                    <legend class="new-legend">Add a New Item</legend>
+                    <label class="new-label">
                         ITEM NAME: <input type="text" name="name" placeholder="Enter here" />
                     </label>
                     <label>
