--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -4,10 +4,10 @@
     <body>
       <%- include("../partials/header.ejs") %>
       <main>
-        <div>
+        <div class="login-div">
             <form action="/user/login" method="POST">
                 <fieldset>
-                    <legend>User Login</legend>
+                    <legend class="login-legend">User Login</legend>
                     <label>
                         USERNAME: <input type="text" name="username" required />
                     </label>
