--- a/views/habits/pomodoro.ejs
+++ b/views/habits/pomodoro.ejs
@@ -5,7 +5,7 @@
     <body>
         <%- include("../partials/header.ejs") %> 
         <main>
-            <h1>Pomodoro Timer</h1>
+            <h1 class="pomodoro-h1">Pomodoro Timer</h1>
             <div class="timer">
                
             </div>
