--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -4,7 +4,7 @@
   <body>
     <%- include("../partials/header.ejs") %>
     <main>
-        <div>
+        <div class="signup-div">
             <form action="/user/signup" method="POST">
                 <fieldset>
                     <legend>New User</legend>
