--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <%- include("../partials/head.ejs") %>
-    <body>
+    <body class="login-body">
       <%- include("../partials/header.ejs") %>
       <main>
         <div class="login-div">
@@ -14,7 +14,7 @@
                     <label>
                         PASSWORD: <input type="password" name="password" required />
                     </label>
-                    <input type="submit" value="Login" />
+                    <input class="login-btn" type="submit" value="Login" />
                 </fieldset>
             </form>
         </div>
