--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <%- include("../partials/head.ejs") %>
-  <body>
+  <body class="signup-body">
     <%- include("../partials/header.ejs") %>
     <main>
         <div class="signup-div">
@@ -14,7 +14,7 @@
                     <label>
                         PASSWORD: <input type="password" name="password" required />
                     </label>
-                    <input type="submit" value="Create Account" />
+                    <input class="signup-btn" type="submit" value="Create Account" />
                 </fieldset>
             </form>
         </div>
